adds responsive styling for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
 
 body{
   overflow: hidden;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .App-logo {
